2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Changed the way update works.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Changed "program" to NULL in 
	gnome_triggers_do.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Fixed leak.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Fixed bug that made appear 200 popups when a modif on
	ILS fails.
	
2002-10-16 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Adds a @ in the callto URL if the user is 
	calling somebody from the ILS directory if he is registered to 
	a gatekeeper.
	
2002-10-15 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: The messages like "contacted ils server" and "updated
	info on ils server" are now displayed in the history, but not anymore
	in the statusbar for single updates as it prevents to see some other
	and more useful messages.
	
2002-10-15 Damien Sandras  <dsandras@seconix.com>

	* src/gnomemeeting.cpp: Removed dummy SHA1 code that was preventing
	GM to register succesfully with H.235 authentication. Thanks a lot
	to Roger for finding this very weird and hard bug!
	
2002-10-15 Roger Hardiman <roger@freebsd.org>

	* src/pref_window.cpp: use kbits for Speex. Remove useless code.

2002-10-14 Damien Sandras  <dsandras@seconix.com>

	* src/pref_window.cpp: Updated bandwidth for Speex.
	
2002-10-14 Damien Sandras  <dsandras@seconix.com>

	* src/common.h: Added support for H.235 authentication.

	* src/config.cpp: Added support for H.235 authentication. Removed
	notifier (there is now an Apply button).

	* src/gatekeeper.cpp: Added support for H.235 authentication.

	* src/main_window.cpp: Added support for H.235 authentication.

	* src/pref_window.cpp: Added support for H.235 authentication.
	Added Apply button.

2002-10-14 Roger Hardiman <roger@freebsd.org>

	* configure.in:	Only check lresolv on linux platforms.

2002-10-14 Damien Sandras  <dsandras@seconix.com>
