@@ -122,9 +122,10 @@ GnomeMeeting::Connect()
     gtk_entry_set_text (GTK_ENTRY (GTK_COMBO (gw->combo)->entry), 
 			call_address);
     
-    gm_history_combo_add_entry (GM_HISTORY_COMBO (gw->combo), 
-				"/apps/gnomemeeting/history/called_urls_list", 
-				gtk_entry_get_text (GTK_ENTRY (GTK_COMBO (gw->combo)->entry)));
+    if (!call_address.IsEmpty ())
+      gm_history_combo_add_entry (GM_HISTORY_COMBO (gw->combo), 
+				  "/apps/gnomemeeting/history/called_urls_list", 
+				  gtk_entry_get_text (GTK_ENTRY (GTK_COMBO (gw->combo)->entry)));
     gnomemeeting_threads_leave ();
 
 
