@@ -1,5 +1,16 @@
 2002-10-17 Damien Sandras  <dsandras@seconix.com>
 
+	* src/endpoint.cpp: Changed gnomemeeting_threads_enter to a more
+	useful place.
+
+	* src/gnomemeeting.cpp: Do not try to add empty URLs to the history.
+
+	* src/ils.cpp: Registering is now asynchronous.
+
+	* src/misc.cpp: Added comments.
+	
+2002-10-17 Damien Sandras  <dsandras@seconix.com>
+
 	* src/ils.cpp: Changed the way update works.
 	
 2002-10-17 Damien Sandras  <dsandras@seconix.com>
